--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-.converter/db.sqlite3
+# local db
+.converter/converter/db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
