--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ coverage.xml
 *.log
 local_settings.py
 # local db
-.converter/converter/db.sqlite3
+/converter/converter/db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
